FAC-573: Refactor SubmitAnswerService to differentiate between submitted and not affected results, and send notifications only when there is actual progress.