@@ -4,6 +4,7 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.flickit.assessment.common.application.domain.notification.NotificationCreator;
 import org.flickit.assessment.common.application.domain.notification.NotificationEnvelope;
+import org.flickit.assessment.core.application.domain.Assessment;
 import org.flickit.assessment.core.application.port.out.assessment.GetAssessmentPort;
 import org.flickit.assessment.core.application.port.out.assessment.GetAssessmentProgressPort;
 import org.flickit.assessment.core.application.port.out.user.LoadUserPort;
@@ -12,7 +13,6 @@ import org.flickit.assessment.core.application.service.answer.notification.Submi
 import org.springframework.stereotype.Component;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.Collections;
 import java.util.List;
 
 @Slf4j
@@ -28,20 +28,33 @@ public class SubmitAnswerNotificationCreator implements
 
     @Override
     public List<NotificationEnvelope> create(SubmitAnswerNotificationCmd cmd) {
-        var progress = getAssessmentProgressPort.getProgress(cmd.assessmentId());
+        if (!cmd.hasProgressed())
+            return List.of();
+
         var assessment = getAssessmentPort.getAssessmentById(cmd.assessmentId());
         var user = loadUserPort.loadById(cmd.assessorId());
-
         if (assessment.isEmpty() || user.isEmpty()) {
             log.warn("assessment or user not found");
             return List.of();
         }
 
-        return (progress.answersCount() == progress.questionsCount()) && (!cmd.assessorId().equals(assessment.get().getCreatedBy()))
-            ? List.of(new NotificationEnvelope(assessment.get().getCreatedBy(), new SubmitAnswerNotificationPayload(
-            new AssessmentModel(assessment.get().getId(), assessment.get().getTitle()),
-            new UserModel(user.get().getId(), user.get().getDisplayName()))))
-            : Collections.emptyList();
+        var progress = getAssessmentProgressPort.getProgress(cmd.assessmentId());
+
+        if (isFinished(progress) && !isFinishedByCreator(cmd, assessment.get())) {
+            return List.of(new NotificationEnvelope(
+                assessment.get().getCreatedBy(),
+                new SubmitAnswerNotificationPayload(new AssessmentModel(assessment.get()), new UserModel(user.get()))
+            ));
+        }
+        return List.of();
+    }
+
+    private boolean isFinished(GetAssessmentProgressPort.Result progress) {
+        return progress.answersCount() == progress.questionsCount();
+    }
+
+    private boolean isFinishedByCreator(SubmitAnswerNotificationCmd cmd, Assessment assessment) {
+        return cmd.assessorId().equals(assessment.getCreatedBy());
     }
 
     @Override
